// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Button Defaults smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="Button_button__1zTCG Button_button_primary__1O4RP  "
          type="button"
  >
    Klikk her
  </button>
</div>
`;

exports[`Tester/Button Disabled smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="Button_button__1zTCG Button_button_primary__1O4RP  "
          disabled
          type="button"
  >
    Klikk her
  </button>
</div>
`;

exports[`Tester/Button DisabledWithIcon smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="Button_button__1zTCG Button_button_primary__1O4RP Button_button_withIcon__2G3uN "
          disabled
          type="button"
  >
    <span class="Button_iconWrapper__3qV4-">
      <svg class="Icon_systemIcon__3UiY7 Icon_systemIcon_medium__3Bf05 Button_icon__Fgskl"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M2 3v7l15 2-15 2v7l21-9L2 3Z">
        </path>
      </svg>
    </span>
    Klikk her
  </button>
</div>
`;

exports[`Tester/Button VariantDanger smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="Button_button__1zTCG Button_button_danger___I_QG  "
          type="button"
  >
    Klikk her
  </button>
</div>
`;

exports[`Tester/Button VariantSecondary smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="Button_button__1zTCG Button_button_secondary__E8eKQ  "
          type="button"
  >
    Klikk her
  </button>
</div>
`;

exports[`Tester/Button VariantTertiary smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="Button_button__1zTCG Button_button_tertiary__1XbyX  "
          type="button"
  >
    Klikk her
  </button>
</div>
`;

exports[`Tester/Button WithAccesskey smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="Button_button__1zTCG Button_button_primary__1O4RP  "
          accesskey="s"
          type="button"
  >
    Klikk her
  </button>
</div>
`;

exports[`Tester/Button WithAriaDescribedby smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="Button_button__1zTCG Button_button_primary__1O4RP  "
          type="button"
          aria-describedby="id1"
  >
    Klikk her
  </button>
</div>
`;

exports[`Tester/Button WithCustomCss smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="Button_button__1zTCG Button_button_secondary__E8eKQ  dummyClassname"
          type="button"
  >
    Klikk her
  </button>
</div>
`;

exports[`Tester/Button WithDataTestid smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="Button_button__1zTCG Button_button_primary__1O4RP  "
          data-testid="123ID"
          type="button"
  >
    Klikk her
  </button>
</div>
`;

exports[`Tester/Button WithIcon smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="Button_button__1zTCG Button_button_primary__1O4RP Button_button_withIcon__2G3uN "
          type="button"
  >
    <span class="Button_iconWrapper__3qV4-">
      <svg class="Icon_systemIcon__3UiY7 Icon_systemIcon_medium__3Bf05 Button_icon__Fgskl"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M2 3v7l15 2-15 2v7l21-9L2 3Z">
        </path>
      </svg>
    </span>
    Klikk her
  </button>
</div>
`;

exports[`Tester/Button WithId smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button id="htmlid"
          class="Button_button__1zTCG Button_button_primary__1O4RP  "
          type="button"
  >
    Klikk her
  </button>
</div>
`;

exports[`Tester/Button WithLang smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="Button_button__1zTCG Button_button_primary__1O4RP  "
          lang="nb"
          type="button"
  >
    Klikk her
  </button>
</div>
`;

exports[`Tester/Button WithLongText smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="Button_button__1zTCG Button_button_primary__1O4RP  "
          type="button"
  >
    Denne knappen har en veldig lang tekst. Så lang at den tvinger fram linjeskift. Her har vi ikke ikon så da skal teksten midtstilles. Denne knappen har en veldig lang tekst. Så lang at den tvinger fram linjeskift. Her har vi ikke ikon så da skal teksten midtstilles
  </button>
</div>
`;

exports[`Tester/Button WithLongTextAndIcon smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="Button_button__1zTCG Button_button_primary__1O4RP Button_button_withIcon__2G3uN "
          type="button"
  >
    <span class="Button_iconWrapper__3qV4-">
      <svg class="Icon_systemIcon__3UiY7 Icon_systemIcon_medium__3Bf05 Button_icon__Fgskl"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M2 3v7l15 2-15 2v7l21-9L2 3Z">
        </path>
      </svg>
    </span>
    Denne knappen har en veldig lang tekst. Så lang at den tvinger fram linjeskift. Tekst skal venstrejusteres. Denne knappen har en veldig lang tekst. Så lang at den tvinger fram linjeskift. Tekst skal venstrejusteres.
  </button>
</div>
`;

exports[`Tester/Button WithLongTextBreaking smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="Button_button__1zTCG Button_button_primary__1O4RP  "
          type="button"
  >
    Denneknappenharenveldiglangtekst.Sålangatdentvingerframlinjeskift.Herharviikkeikonsådaskaltekstenmidtstilles.Denneknappenharenveldiglangtekst.Sålangatdentvingerframlinjeskift.Herharviikkeikonsådaskaltekstenmidtstilles
  </button>
</div>
`;

exports[`Tester/Button WithOnBlur smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="Button_button__1zTCG Button_button_primary__1O4RP  "
          type="button"
  >
    Klikk på knapp for å teste onBlur event
  </button>
</div>
`;

exports[`Tester/Button WithOnClick smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="Button_button__1zTCG Button_button_primary__1O4RP  "
          type="button"
  >
    Klikk på knapp for å teste onClick event
  </button>
</div>
`;

exports[`Tester/Button WithOnFocus smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="Button_button__1zTCG Button_button_primary__1O4RP  "
          type="button"
  >
    Klikk på knapp for å teste onFocus event
  </button>
</div>
`;

exports[`Tester/Button WithRef smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="Button_button__1zTCG Button_button_primary__1O4RP  "
          type="button"
          id="dummyIdForwardedFromRef"
  >
    Klikk her
  </button>
</div>
`;

exports[`Tester/Button WithType smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="Button_button__1zTCG Button_button_primary__1O4RP  "
          type="submit"
  >
    Klikk her
  </button>
</div>
`;
